# rust-media-pipeline

./: .gitignore  Dockerfile.web  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml
config/: settings.toml
python_frontend/: app.py  requirements.txt  worker.py
python_frontend/templates/: index.html
rust_worker/: Cargo.toml
rust_worker/src/: acquisition.rs  audio.rs  binary.rs  config.rs  ffmpeg_video.rs  main.rs  video.rs
scripts/: start_local.sh
